feat: platform: 添加layout;支持styled-jsx;添加route-error-element;

--- a/platform/src/styles/global.css
+++ b/platform/src/styles/global.css
@@ -3,7 +3,7 @@
 /*! purgecss end ignore */
 
 @tailwind utilities;
-
+/* 
 #engine,
 body {
   position: fixed;
@@ -21,4 +21,4 @@ body {
   -webkit-text-size-adjust: none;
   -webkit-touch-callout: none;
   -webkit-font-smoothing: antialiased;
-}
+} */
