--- a/platform/src/index.ejs
+++ b/platform/src/index.ejs
@@ -33,13 +33,13 @@
     <script>
       React.PropTypes = PropTypes
     </script>
-    <script src="https://g.alicdn.com/platform/c/??react15-polyfill/0.0.1/dist/index.js,lodash/4.6.1/lodash.min.js,immutable/3.7.6/dist/immutable.min.js,natty-storage/2.0.2/dist/natty-storage.min.js,natty-fetch/2.6.0/dist/natty-fetch.pc.min.js,tinymce/4.2.5/tinymce-full.js"></script>
+    <script src="https://g.alicdn.com/platform/c/react15-polyfill/0.0.1/dist/index.js"></script>
     <% } %>
     <script src="https://g.alicdn.com/mylib/moment/2.29.1/min/moment.min.js"></script>
+    <script src="https://g.alicdn.com/platform/c/lodash/4.6.1/lodash.min.js"></script>
     <% if (useFor == 'designer' || useFor == 'preview') { %>
     <script src="https://g.alicdn.com/code/lib/alifd__next/1.23.24/next-with-locales.min.js"></script>
     <% } %> <% if (useFor == 'designer') { %>
-    <script src="https://g.alicdn.com/platform/c/lodash/4.6.1/lodash.min.js"></script>
 
     <script src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine@1.0.14/dist/js/engine-core.js"></script>
     <script src="https://alifd.alicdn.com/npm/@alilc/lowcode-engine-ext@1.0.4/dist/js/engine-ext.js"></script>
