--- a/platform/src/styles/antd-reset.less
+++ b/platform/src/styles/antd-reset.less
@@ -1,3 +1,6 @@
-.antd-dialog-wrap .ant-modal-content {
-  border-radius: 10px !important;
+.ant-popover-inner {
+  padding: 12px 16px;
+}
+.ant-popover-inner-content {
+  padding: 0;
 }
