feat: backend:统一接口出参;使用中间件替代polices;新增更新应用接口;新增appId查询应用接口; platform:优化route结构;新增应用缺省页,应用设置页;

--- a/platform/src/styles/global.css
+++ b/platform/src/styles/global.css
@@ -22,3 +22,22 @@ body {
   -webkit-touch-callout: none;
   -webkit-font-smoothing: antialiased;
 } */
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(23, 26, 29, 0.24);
+  border-radius: 6px;
+  border-style: dashed;
+  border-color: transparent;
+  border-width: 2px;
+  background-clip: padding-box;
+}
+
+html,
+body {
+  color: #171a1d;
+}
