--- a/platform/src/index.ejs
+++ b/platform/src/index.ejs
@@ -28,11 +28,12 @@
     <script crossorigin src="https://unpkg.com/react-dom@16.14.0/umd/react-dom.development.js"></script>
     <% } %> <% if (useFor == 'designer') { %>
     <script src="https://g.alicdn.com/code/lib/rax/1.1.0/rax.umd.min.js"></script>
-    <% } %> <% if (useFor == 'designer' || useFor == 'preview') { %>
+    <% } %> 
     <script src="https://g.alicdn.com/code/lib/prop-types/15.7.2/prop-types.js"></script>
     <script>
       React.PropTypes = PropTypes
     </script>
+    <% if (useFor == 'designer' || useFor == 'preview') { %>
     <script src="https://g.alicdn.com/platform/c/react15-polyfill/0.0.1/dist/index.js"></script>
     <% } %>
     <script src="https://g.alicdn.com/mylib/moment/2.29.1/min/moment.min.js"></script>
